added basic html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
 </head>
 
 <body>
+  <div>
+    <p>
+      <b>numquam ea debitis quae voluptatem, harum esse maxime voluptate, asperiores blanditiis id. Ab,</b> ipsa vel
+      ullam ad error cum harum officiis at? Magnam sint quae neque at mollitia id eius omnis, qui maxime ea, veritatis
+      modi atque.
+    </p>
+  </div>
+  <div>
+    <p>
+      <i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum minima vitae, fugit tempore reiciendis ut fugiat
+        est eum
+        accusantium ducimus. Commodi corporis optio soluta architecto</i> maxime aperiam aliquam eum, excepturi
+      obcaecati nobis, dolorem quis veritatis. Quas quidem repellat, maiores delectus voluptatem ipsam aliquid pariatur
+      similique saepe eius doloremque debitis nihil, mollitia suscipit incidunt quae fugit sapiente libero dicta unde
+      molestiae?
+    </p>
+  </div>
+  <img src="images/sea beach.jpg" alt="sea beach photo">
+  <form action="">
+    <input type="email" placeholder="your email">
+    <input type="password" placeholder="your password">
+    <button>submit</button>
+  </form>
+
 
 </body>
 
