--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <div>
+    <h1>Travel Blog</h1>
     <p>
       <b>numquam ea debitis quae voluptatem, harum esse maxime voluptate, asperiores blanditiis id. Ab,</b> ipsa vel
       ullam ad error cum harum officiis at? Magnam sint quae neque at mollitia id eius omnis, qui maxime ea, veritatis
@@ -16,6 +17,8 @@
     </p>
   </div>
   <div>
+    <h2> sea beach travel</h2>
+
     <p>
       <i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum minima vitae, fugit tempore reiciendis ut fugiat
         est eum
@@ -28,7 +31,9 @@
   <img src="images/sea beach.jpg" alt="sea beach photo">
   <form action="">
     <input type="email" placeholder="your email">
+    <br>
     <input type="password" placeholder="your password">
+    <br>
     <button>submit</button>
   </form>
 
